Change ServiceAccount's name

--- a/tigera-operator/templates/tigera-operator/00-uninstall.yaml
+++ b/tigera-operator/templates/tigera-operator/00-uninstall.yaml
@@ -31,7 +31,7 @@ spec:
       restartPolicy: Never
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
-      serviceAccountName: tigera-operator
+      serviceAccountName: {{.Values.k8sPrefix}}-sa-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
       containers:
       - name: cleanup-job
         image: {{ template "tigera-operator.image" .Values.tigeraOperator}}
