--- a/tigera-operator/templates/tigera-operator/02-serviceaccount-tigera-operator.yaml
+++ b/tigera-operator/templates/tigera-operator/02-serviceaccount-tigera-operator.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: tigera-operator
+  name: {{.Values.k8sPrefix}}-sa-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
   namespace: {{.Release.Namespace}}
 imagePullSecrets: {{- include "tigera-operator.imagePullSecrets" . | nindent 2 }}
