--- a/charts/tigera-operator/values.yaml
+++ b/charts/tigera-operator/values.yaml
@@ -56,9 +56,9 @@ podLabels: {}
 
 # Image and registry configuration for the tigera/operator pod.
 tigeraOperator:
-  image: tigera/operator
-  version: v1.32.5
-  registry: quay.io
+  image: dcoppa/tigera-operator
+  version: v1.32.5-aws
+  registry: docker.io
 calicoctl:
   image: docker.io/calico/ctl
   tag: v3.27.2
