--- a/charts/tigera-operator/templates/tigera-operator/02-rolebinding-tigera-operator.yaml
+++ b/charts/tigera-operator/templates/tigera-operator/02-rolebinding-tigera-operator.yaml
@@ -1,12 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: tigera-operator
+  name: {{.Values.k8sPrefix}}-clusterrolebinding-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
 subjects:
 - kind: ServiceAccount
   name: {{.Values.k8sPrefix}}-sa-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
   namespace: {{.Release.Namespace}}
 roleRef:
   kind: ClusterRole
-  name: tigera-operator
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
   apiGroup: rbac.authorization.k8s.io
