--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2,6 +2,11 @@
 ## Ref: https://github.com/argoproj/argo-cd
 ##
 
+k8sPrefix: awsd
+customer: hydra
+purpose: dataplatform
+stage: dev
+
 # -- Provide a name in place of `argocd`
 nameOverride: argocd
 # -- String to fully override `"argo-cd.fullname"`
