--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -80,163 +80,163 @@ spec:
           - name: ARGOCD_SERVER_INSECURE
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.insecure
                 optional: true
           - name: ARGOCD_SERVER_BASEHREF
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.basehref
                 optional: true
           - name: ARGOCD_SERVER_ROOTPATH
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.rootpath
                 optional: true
           - name: ARGOCD_SERVER_LOGFORMAT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.log.format
                 optional: true
           - name: ARGOCD_SERVER_LOG_LEVEL
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.log.level
                 optional: true
           - name: ARGOCD_SERVER_REPO_SERVER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: repo.server
                 optional: true
           - name: ARGOCD_SERVER_DEX_SERVER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.dex.server
                 optional: true
           - name: ARGOCD_SERVER_DISABLE_AUTH
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.disable.auth
                 optional: true
           - name: ARGOCD_SERVER_ENABLE_GZIP
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.enable.gzip
                 optional: true
           - name: ARGOCD_SERVER_REPO_SERVER_TIMEOUT_SECONDS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.repo.server.timeout.seconds
                 optional: true
           - name: ARGOCD_SERVER_X_FRAME_OPTIONS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.x.frame.options
                 optional: true
           - name: ARGOCD_SERVER_CONTENT_SECURITY_POLICY
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.content.security.policy
                 optional: true
           - name: ARGOCD_SERVER_REPO_SERVER_PLAINTEXT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.repo.server.plaintext
                 optional: true
           - name: ARGOCD_SERVER_REPO_SERVER_STRICT_TLS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.repo.server.strict.tls
                 optional: true
           - name: ARGOCD_SERVER_DEX_SERVER_PLAINTEXT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.dex.server.plaintext
                 optional: true
           - name: ARGOCD_SERVER_DEX_SERVER_STRICT_TLS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.dex.server.strict.tls
                 optional: true
           - name: ARGOCD_TLS_MIN_VERSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.tls.minversion
                 optional: true
           - name: ARGOCD_TLS_MAX_VERSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.tls.maxversion
                 optional: true
           - name: ARGOCD_TLS_CIPHERS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.tls.ciphers
                 optional: true
           - name: ARGOCD_SERVER_CONNECTION_STATUS_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.connection.status.cache.expiration
                 optional: true
           - name: ARGOCD_SERVER_OIDC_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.oidc.cache.expiration
                 optional: true
           - name: ARGOCD_SERVER_LOGIN_ATTEMPTS_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.login.attempts.expiration
                 optional: true
           - name: ARGOCD_SERVER_STATIC_ASSETS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.staticassets
                 optional: true
           - name: ARGOCD_APP_STATE_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.app.state.cache.expiration
                 optional: true
           - name: REDIS_SERVER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.server
                 optional: true
           - name: REDIS_COMPRESSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.compression
                 optional: true
           - name: REDISDB
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.db
                 optional: true
           - name: REDIS_USERNAME
@@ -254,73 +254,73 @@ spec:
           - name: ARGOCD_DEFAULT_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.default.cache.expiration
                 optional: true
           - name: ARGOCD_MAX_COOKIE_NUMBER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.http.cookie.maxnumber
                 optional: true
           - name: ARGOCD_SERVER_LISTEN_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.listen.address
                 optional: true
           - name: ARGOCD_SERVER_METRICS_LISTEN_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.metrics.listen.address
                 optional: true
           - name: ARGOCD_SERVER_OTLP_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.address
                 optional: true
           - name: ARGOCD_SERVER_OTLP_INSECURE
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.insecure
                 optional: true
           - name: ARGOCD_SERVER_OTLP_HEADERS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.headers
                 optional: true
           - name: ARGOCD_APPLICATION_NAMESPACES
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: application.namespaces
                 optional: true
           - name: ARGOCD_SERVER_ENABLE_PROXY_EXTENSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.enable.proxy.extension
                 optional: true
           - name: ARGOCD_K8SCLIENT_RETRY_MAX
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.k8sclient.retry.max
                 optional: true
           - name: ARGOCD_K8SCLIENT_RETRY_BASE_BACKOFF
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.k8sclient.retry.base.backoff
                 optional: true
           - name: ARGOCD_API_CONTENT_TYPES
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: server.api.content.types
                 optional: true
         {{- with .Values.server.envFrom }}
@@ -336,9 +336,9 @@ spec:
         - mountPath: /app/config/tls
           name: tls-certs
         - mountPath: /app/config/server/tls
-          name: argocd-repo-server-tls
+          name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
         - mountPath: /app/config/dex/tls
-          name: argocd-dex-server-tls
+          name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-dex-server-tls-{{.Values.stage}}
         - mountPath: /home/argocd
           name: plugins-home
         - mountPath: /shared/app/custom
@@ -450,17 +450,17 @@ spec:
         emptyDir: {}
       - name: ssh-known-hosts
         configMap:
-          name: argocd-ssh-known-hosts-cm
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-ssh-known-hosts-{{.Values.stage}}
       - name: tls-certs
         configMap:
-          name: argocd-tls-certs-cm
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-tls-certs-{{.Values.stage}}
       - name: styles
         configMap:
-          name: argocd-styles-cm
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-styles-{{.Values.stage}}
           optional: true
-      - name: argocd-repo-server-tls
+      - name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
         secret:
-          secretName: argocd-repo-server-tls
+          secretName: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
           optional: true
           items:
           - key: tls.crt
@@ -469,9 +469,9 @@ spec:
             path: tls.key
           - key: ca.crt
             path: ca.crt
-      - name: argocd-dex-server-tls
+      - name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-dex-server-tls-{{.Values.stage}}
         secret:
-          secretName: argocd-dex-server-tls
+          secretName: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-dex-server-tls-{{.Values.stage}}
           optional: true
           items:
           - key: tls.crt
