--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -83,115 +83,115 @@ spec:
           - name: ARGOCD_RECONCILIATION_TIMEOUT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-{{.Values.stage}}
                 key: timeout.reconciliation
                 optional: true
           - name: ARGOCD_HARD_RECONCILIATION_TIMEOUT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-{{.Values.stage}}
                 key: timeout.hard.reconciliation
                 optional: true
           - name: ARGOCD_RECONCILIATION_JITTER
             valueFrom:
               configMapKeyRef:
                 key: timeout.reconciliation.jitter
-                name: argocd-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_REPO_ERROR_GRACE_PERIOD_SECONDS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.repo.error.grace.period.seconds
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_REPO_SERVER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: repo.server
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_REPO_SERVER_TIMEOUT_SECONDS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.repo.server.timeout.seconds
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_STATUS_PROCESSORS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.status.processors
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_OPERATION_PROCESSORS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.operation.processors
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_LOGFORMAT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.log.format
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_LOGLEVEL
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.log.level
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_METRICS_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.metrics.cache.expiration
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_SELF_HEAL_TIMEOUT_SECONDS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.self.heal.timeout.seconds
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_REPO_SERVER_PLAINTEXT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.repo.server.plaintext
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_REPO_SERVER_STRICT_TLS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.repo.server.strict.tls
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_PERSIST_RESOURCE_HEALTH
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.resource.health.persist
                 optional: true
           - name: ARGOCD_APP_STATE_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.app.state.cache.expiration
                 optional: true
           - name: REDIS_SERVER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.server
                 optional: true
           - name: REDIS_COMPRESSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.compression
                 optional: true
           - name: REDISDB
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.db
                 optional: true
           - name: REDIS_USERNAME
@@ -209,61 +209,61 @@ spec:
           - name: ARGOCD_DEFAULT_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.default.cache.expiration
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_OTLP_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.address
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_OTLP_INSECURE
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.insecure
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_OTLP_HEADERS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.headers
                 optional: true
           - name: ARGOCD_APPLICATION_NAMESPACES
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: application.namespaces
                 optional: true
           - name: ARGOCD_CONTROLLER_SHARDING_ALGORITHM
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.sharding.algorithm
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_KUBECTL_PARALLELISM_LIMIT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.kubectl.parallelism.limit
                 optional: true
           - name: ARGOCD_K8SCLIENT_RETRY_MAX
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.k8sclient.retry.max
                 optional: true
           - name: ARGOCD_K8SCLIENT_RETRY_BASE_BACKOFF
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.k8sclient.retry.base.backoff
                 optional: true
           - name: ARGOCD_APPLICATION_CONTROLLER_SERVER_SIDE_DIFF
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: controller.diff.server.side
                 optional: true
         {{- with .Values.controller.envFrom }}
@@ -295,7 +295,7 @@ spec:
           {{- toYaml . | nindent 8 }}
         {{- end }}
         - mountPath: /app/config/controller/tls
-          name: argocd-repo-server-tls
+          name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
         - mountPath: /home/argocd
           name: argocd-home
       {{- with .Values.controller.extraContainers }}
@@ -334,9 +334,9 @@ spec:
       {{- end }}
       - name: argocd-home
         emptyDir: {}
-      - name: argocd-repo-server-tls
+      - name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
         secret:
-          secretName: argocd-repo-server-tls
+          secretName: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
           optional: true
           items:
           - key: tls.crt
