--- a/charts/argo-cd/templates/argocd-notifications/role.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/role.yaml
@@ -29,7 +29,7 @@ rules:
 - apiGroups:
   - ""
   resourceNames:
-  - argocd-notifications-cm
+  - {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-notifications-{{.Values.stage}}
   resources:
   - configmaps
   verbs:
