--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -90,85 +90,85 @@ spec:
           - name: ARGOCD_RECONCILIATION_TIMEOUT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-{{.Values.stage}}
                 key: timeout.reconciliation
                 optional: true
           - name: ARGOCD_REPO_SERVER_LOGFORMAT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.log.format
                 optional: true
           - name: ARGOCD_REPO_SERVER_LOGLEVEL
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.log.level
                 optional: true
           - name: ARGOCD_REPO_SERVER_PARALLELISM_LIMIT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.parallelism.limit
                 optional: true
           - name: ARGOCD_REPO_SERVER_LISTEN_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.listen.address
                 optional: true
           - name: ARGOCD_REPO_SERVER_LISTEN_METRICS_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.metrics.listen.address
                 optional: true
           - name: ARGOCD_REPO_SERVER_DISABLE_TLS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.disable.tls
                 optional: true
           - name: ARGOCD_TLS_MIN_VERSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.tls.minversion
                 optional: true
           - name: ARGOCD_TLS_MAX_VERSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.tls.maxversion
                 optional: true
           - name: ARGOCD_TLS_CIPHERS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.tls.ciphers
                 optional: true
           - name: ARGOCD_REPO_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.repo.cache.expiration
                 optional: true
           - name: REDIS_SERVER
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.server
                 optional: true
           - name: REDIS_COMPRESSION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.compression
                 optional: true
           - name: REDISDB
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: redis.db
                 optional: true
           - name: REDIS_USERNAME
@@ -186,86 +186,86 @@ spec:
           - name: ARGOCD_DEFAULT_CACHE_EXPIRATION
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.default.cache.expiration
                 optional: true
           - name: ARGOCD_REPO_SERVER_OTLP_ADDRESS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.address
                 optional: true
           - name: ARGOCD_REPO_SERVER_OTLP_INSECURE
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.insecure
                 optional: true
           - name: ARGOCD_REPO_SERVER_OTLP_HEADERS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: otlp.headers
                 optional: true
           - name: ARGOCD_REPO_SERVER_MAX_COMBINED_DIRECTORY_MANIFESTS_SIZE
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.max.combined.directory.manifests.size
                 optional: true
           - name: ARGOCD_REPO_SERVER_PLUGIN_TAR_EXCLUSIONS
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.plugin.tar.exclusions
                 optional: true
           - name: ARGOCD_REPO_SERVER_ALLOW_OUT_OF_BOUNDS_SYMLINKS
             valueFrom:
               configMapKeyRef:
                 key: reposerver.allow.oob.symlinks
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_REPO_SERVER_STREAMED_MANIFEST_MAX_TAR_SIZE
             valueFrom:
               configMapKeyRef:
                 key: reposerver.streamed.manifest.max.tar.size
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_REPO_SERVER_STREAMED_MANIFEST_MAX_EXTRACTED_SIZE
             valueFrom:
               configMapKeyRef:
                 key: reposerver.streamed.manifest.max.extracted.size
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_REPO_SERVER_HELM_MANIFEST_MAX_EXTRACTED_SIZE
             valueFrom:
               configMapKeyRef:
                 key: reposerver.helm.manifest.max.extracted.size
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_REPO_SERVER_DISABLE_HELM_MANIFEST_MAX_EXTRACTED_SIZE
             valueFrom:
               configMapKeyRef:
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: reposerver.disable.helm.manifest.max.extracted.size
                 optional: true
           - name: ARGOCD_GIT_MODULES_ENABLED
             valueFrom:
               configMapKeyRef:
                 key: reposerver.enable.git.submodule
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_GIT_LS_REMOTE_PARALLELISM_LIMIT
             valueFrom:
               configMapKeyRef:
                 key: reposerver.git.lsremote.parallelism.limit
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           - name: ARGOCD_GIT_REQUEST_TIMEOUT
             valueFrom:
               configMapKeyRef:
                 key: reposerver.git.request.timeout
-                name: argocd-cmd-params-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 optional: true
           {{- if .Values.repoServer.useEphemeralHelmWorkingDir }}
           - name: HELM_CACHE_HOME
@@ -292,7 +292,7 @@ spec:
         - mountPath: /app/config/gpg/keys
           name: gpg-keyring
         - mountPath: /app/config/reposerver/tls
-          name: argocd-repo-server-tls
+          name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
         {{- if .Values.repoServer.useEphemeralHelmWorkingDir }}
         - mountPath: /helm-working-dir
           name: helm-working-dir
@@ -417,22 +417,22 @@ spec:
         {{- end }}
       - name: ssh-known-hosts
         configMap:
-          name: argocd-ssh-known-hosts-cm
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-ssh-known-hosts-{{.Values.stage}}
       - name: tls-certs
         configMap:
-          name: argocd-tls-certs-cm
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-tls-certs-{{.Values.stage}}
       - name: gpg-keys
         configMap:
-          name: argocd-gpg-keys-cm
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-gpg-keys-{{.Values.stage}}
       - name: gpg-keyring
         {{- if .Values.repoServer.existingVolumes.gpgKeyring -}}
         {{ toYaml .Values.repoServer.existingVolumes.gpgKeyring | nindent 8  }}
         {{- else }}
         emptyDir: {}
         {{- end }}
-      - name: argocd-repo-server-tls
+      - name: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
         secret:
-          secretName: argocd-repo-server-tls
+          secretName: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-repo-server-tls-{{.Values.stage}}
           optional: true
           items:
           - key: tls.crt
