--- a/charts/argo-cd/templates/argocd-server/aws/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-server/aws/ingress.yaml
@@ -62,7 +62,7 @@ spec:
     {{- if .Values.server.ingress.tls }}
     - hosts:
       - {{ .Values.server.ingress.hostname | default .Values.global.domain }}
-      secretName: argocd-server-tls
+      secretName: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-server-tls-{{.Values.stage}}
     {{- end }}
     {{- with .Values.server.ingress.extraTls }}
       {{- toYaml . | nindent 4 }}
