--- a/charts/argo-cd/templates/argocd-server/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress.yaml
@@ -60,7 +60,7 @@ spec:
       -  {{ .name }}
         {{- end }}
       {{- end }}
-      secretName: argocd-server-tls
+      secretName: {{.Values.k8sPrefix}}-secret-{{.Values.customer}}-{{.Values.purpose}}-argocd-server-tls-{{.Values.stage}}
     {{- end }}
     {{- with .Values.server.ingress.extraTls }}
       {{- toYaml . | nindent 4 }}
